fixed responsive issues on small screen devices

--- a/loso.css
+++ b/loso.css
@@ -887,6 +887,31 @@ footer a {
         width: 100%;
     }
 
+    .about-us-content-container img {
+        height: 300px;
+    }
+
+    .client-testimonial img {
+        width: 90px;
+    }
+
+    .client-testimonial h1,
+    .client-testimonial .occupation {
+        font-size: 1rem;
+    }
+
+    .client-testimonial .occupation {
+        text-align: center;
+    }
+
+    .client-testimonial .testimonial-statement {
+        padding: 0 20px;
+    }
+
+    .screens img {
+        width: 160px;
+    }
+
     .contact-us form {
         padding-left: 0;
         padding-right: 0;
@@ -900,5 +925,10 @@ footer a {
 
     .contact-us form button {
         font-size: 1rem;
+    }
+
+    footer a {
+        right: 10px;
+        padding: 5px 10px;
     }
 }
